<?xml version="1.0"?>
<package format="3">
  <name>amr_interfaces</name>
  <version>0.0.0</version>
  <description>AMR Interfaces</description>

  <maintainer email="126012050@sastra.ac.in">sugant</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- 🔥 THIS LINE FIXES YOUR ERROR -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>